Arreglada ruta de css

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,10 +3,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Proctica Programacion Hipermedial</title>
+        <title>Practica Programacion Hipermedial</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="stilos.css" type="text/css" />
+        <link rel="stylesheet" href="css/stilos.css" type="text/css" />
     </head>
     
     <body>
