--- a/public_html/instrumentos_cuerda.html
+++ b/public_html/instrumentos_cuerda.html
@@ -6,21 +6,24 @@
         <title>Instrumentos de Cuerda</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/2columnas.css" type="text/css" />
+        <link rel="stylesheet" href="css/stilos.css" type="text/css" />
     </head>
 
-    <body>
+    <body class="body">
 
-        <header>
-                <img src="images/guitarra2.png" alt="Guitarra" width="400" height="170"/>
+        <header class="cabeceratipins">
+                <img class="imagenlogotipoins" src="images/guitarra2.png" alt="Guitarra" width="400" height="170"/>
             
             <a href="instrumentos_viento.html#Viento">Click para ver Instrumentos de Viento &nbsp; </a>
             <a href="instrumentos_percusion.html#Percusion">Click para ver Instrumentos de Percusion &nbsp; </a>
             <a href="generos_musicales.html#Genero">Click para ver Géneros Musicales &nbsp; </a>
         </header>
 
-        <h1>Contenido:</h1>
+        
 
-        <nav>
+        <nav id="menuPrincipal">
+            <h1>Contenido:</h1>
             <ul>
 
                 <li>1 <a href="index.html">Página principal</a></li> 
@@ -33,6 +36,7 @@
                 <li>3 <a href="generos_musicales.html">Géneros de Musica</a></li>
             </ul>
         </nav>
+        <div id="contenido">
         <section>
 
                 <h1>Instrumentos de Cuerda</h1>
@@ -45,7 +49,7 @@
                     por medio de las vibraciones de una o más cuerdas, usualmente amplificadas por medio de 
                     una caja de resonancia. Estas cuerdas están tensadas entre dos puntos del instrumento y 
                     se hacen sonar pulsando, frotando o percutiendo la cuerda.   </p>
-                <img src="images/guitarra3.jpg" alt="Guitarra" width="350" height="250"/>
+                <img class='imgcentrada' src="images/guitarra3.jpg" alt="Guitarra" />
                 <p>En la orquesta clásica, se llama «cuerdas» al conjunto de instrumentos de cuerda frotada 
                     formado por los grupos de violines (normalmente divididos en violines primeros y segundos),
                     violas, violonchelos y contrabajos. Lo mismo sucede con la orquesta de cuerdas, que está 
@@ -76,8 +80,8 @@
 
             <aside>HTML5</aside>
         </section>
-
-        <footer>
+        </div>
+        <footer id="pie">
                 Luis René Panjón &#8226; Universidad Politécnica Salesiana &#8226; 
                 telefono: <a href="tel:+593967270947">(593) 967-270-947</a> &#8226;
                 Correo: <a href="mailto:lpanjon@est.ups.edu.ec">lpanjon@est.ups.edu.ec</a> &#8226;
