--- a/public_html/generos_musicales.html
+++ b/public_html/generos_musicales.html
@@ -4,19 +4,21 @@
         <title>Géneros Musicales</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <link rel="stylesheet" href="css/3columnas.css" type="text/css" />
+        <link rel="stylesheet" href="css/stilos.css" type="text/css" />
 
     </head>
 
-    <body>
+    <body class='body'>
 
-        <header>
-            <img src="images/generos.png" alt="Géneros de musica" width="680" height="190"/>
+        <header class="cabeceratipins">
+            <img class="imagenlogotipoins" src="images/generos.png" alt="Géneros de musica" width="680" height="190"/>
         </header>
 
-        <h1>Contenido:</h1>
 
-        <nav>
+
+        <nav id='menuPrincipal' >
+            <h1>Contenido:</h1>
             <ul>
 
                 <li>1 <a href="index.html">Página principal</a></li> 
@@ -29,35 +31,92 @@
                 <li>3 <a href="generos_musicales.html">Géneros de Musica</a></li>
             </ul>
         </nav>
-        <section>
+        <div id='contenido'>
+            <section >
 
-            <h1><i>Géneros de Música</i></h1>
+                <h1><i>Géneros de Música</i></h1>
 
-            <article>
+                <article>
 
-                <p>Un <b><em>género musical</em></b> es una categoría que reúne composiciones musicales que comparten distintos 
-                    criterios de afinidad,1​ tales como su función (música de danza, música religiosa, música de cine...), su 
-                    instrumentación (música vocal, música instrumental, música electrónica...), el contexto social en que es
-                    producida o el contenido de su texto.
-                <p>Mientras que las tradicionales clasificaciones académicas en géneros musicales han atendido
-                    fundamentalmente a la función de la composición musical (para qué es compuesta la pieza, como en los ejemplos anteriores),
-                    las <i>clasificaciones</i> por géneros de la música moderna, usadas por la industria discográfica, han atendido más a criterios 
-                    específicamente musicales (ritmo, instrumentación, armonía...) y a características culturales, como el contexto geográfico, 
-                    histórico o social; se ha asimilado así el concepto de género musical al de estilo musical, y es habitual que hoy se califique
-                    de "géneros" al flamenco, el rock o el country (ejemplo: <cite><q>el rock es un género musical de ritmo muy marcado</q></cite>)</p>
-                <h2>Rock</h2>
-                <img src="images/rock.png" alt="ROCK" width="500" height="190" />
-                <h2>Salsa</h2>
-                <img src="images/salsa.jpg" alt="SALSA" width="500" height="190" />
-                <h2>Rap</h2>
-                <img src="images/rap.jpeg" alt="RAP" width="400" height="190" />
+                    <p>Un <b><em>género musical</em></b> es una categoría que reúne composiciones musicales que comparten distintos 
+                        criterios de afinidad,1​ tales como su función (música de danza, música religiosa, música de cine...), su 
+                        instrumentación (música vocal, música instrumental, música electrónica...), el contexto social en que es
+                        producida o el contenido de su texto.
+                    <p>Mientras que las tradicionales clasificaciones académicas en géneros musicales han atendido
+                        fundamentalmente a la función de la composición musical (para qué es compuesta la pieza, como en los ejemplos anteriores),
+                        las <i>clasificaciones</i> por géneros de la música moderna, usadas por la industria discográfica, han atendido más a criterios 
+                        específicamente musicales (ritmo, instrumentación, armonía...) y a características culturales, como el contexto geográfico, 
+                        histórico o social; se ha asimilado así el concepto de género musical al de estilo musical, y es habitual que hoy se califique
+                        de "géneros" al flamenco, el rock o el country (ejemplo: <cite><q>el rock es un género musical de ritmo muy marcado</q></cite>)</p>
+                    <h2>Rock</h2>
+                    <img class='imgcentrada' src="images/rock.png" alt="ROCK" />
+                    <h2>Salsa</h2>
+                    <img class='imgcentrada' src="images/salsa.jpg" alt="SALSA"  />
+                    <h2>Rap</h2>
+                    <img  class='imgcentrada' src="images/rap.jpeg" alt="RAP"  />
 
 
-            </article>
+                </article>
 
+
+                <article >  
+                    <h2>Clasificación segun Hornbostel y Sachs</h2>
+                    <p>Erich von Hornbostel y Curt Sachs publicaron en 1914 una clasificación de los instrumentos musicales en su trabajo 
+                        Zeitschrift für Ethnologie que es ampliamente seguida en la actualidad.
+                        Establecieron <strong>cuatro clases o categorías principales </strong> de instrumentos musicales (a la que añadieron una quinta posteriormente),
+                        que a su vez se dividen en grupos y subgrupos, según el modo de generación del sonido:</p>
+
+                </article>
+            <section>
+                <h2>¿Cuántos géneros musicales existen?</h2>
+                <article>
+                    <h2>  Tipos de música o estilos musicales</h2>
+                    <p>
+                        Los géneros musicales son una clasificación academicista de música según determinados aspectos. Se valora la instrumentación y la función de estas obras.
+                    </p>
+                    <p>Más tarde se incorporan criterios como características culturales, contexto histórico-geográfico o estilo. La clasificación divide los tipos de música según instrumentación en música vocal o instrumental
+                        y según la finalidad de la obra: música religiosa, profana, dramática…</p>
+                </article>
+                <article>
+                    <h2>Criterios de clasificación de géneros musicales</h2>
+                    <p>
+                        La industrialización de la música en el siglo XX clasifica más profundamente, elaborando los géneros actuales.
+                        La clasificación tiene como base una <q>dualidad</q>:
+                    </p>
+                    <ul>
+                        <li>Música moderna</li>
+                        <li>Música clásica</li>
+                    </ul>
+                    <p>Dentro de esta rama se añade otra:</p>
+                    <ul>
+                        <li>Música culta</li>
+                        <li>Música tradicional</li>
+                    </ul>
+                </article>
+                <h2>Géneros musicales</h2>
+                <ul>
+                    <li>Blues</li>
+                    <li>Corrido</li>
+                    <li>Country</li>
+                    <li>Cumbia</li>
+                    <li>Disco</li>
+                    <li>Gospel</li>
+                    <li>Hip hop</li>
+                    <li>Jazz</li>
+                    <li>Merengue</li>
+                    <li>Y muchos otros...</li>
+                </ul>
+                <article>
+                    <aside><br> Version 1.0.0</aside>
+
+                    <aside>HTML5</aside>
+                </article>
+            </section>
+        </div>
+        <div id='lateral' >
             <article>
                 <h2>Sus mayores exponentes</h2>
-                <table border="1px  black solid;" class="schedule">
+                <table>
                     <caption>Mayores Exponentes</caption>
                     <tr>
                         <th rowspan="1"> Lista de los mejores exponentes de su género </th>
@@ -87,78 +146,10 @@
                         <td colspan="4"> Está es una pequeña lista pequeña de algunos de los mayores exponentes en distintos géneros.</td>
                     </tr>    
                 </table>
-            </article>           
-            <article>    
-                <p>Erich von Hornbostel y Curt Sachs publicaron en 1914 una clasificación de los instrumentos musicales en su trabajo 
-                    Zeitschrift für Ethnologie que es ampliamente seguida en la actualidad.
-                    Establecieron <strong>cuatro clases o categorías principales </strong> de instrumentos musicales (a la que añadieron una quinta posteriormente),
-                    que a su vez se dividen en grupos y subgrupos, según el modo de generación del sonido:</p>
+            </article>
 
-                <h3>&#8226; <cite>Idiófonos</cite></h3>
-                <p>Son aquellos instrumentos en los que el sonido procede de un cuerpo sólido y es generado por vibración del instrumento mismo 
-                    mediante percusión, frotación o pulsación, como en el caso de las claves, xilófono, campana.</p>
-                <h3>&#8226; <cite>Membranófonos</cite></h3>
-                <p>Los membranófonos son aquellos en los cuales el sonido es generado por la vibración de una membrana por percusión o frotación,
-                    como es el caso del timbal, tambor, conga.</p>
-                <h3>&#8226; <cite>Aerófonos</cite></h3>
-                <p>Son los llamados instrumentos de viento, donde el sonido es generado por la vibración del aire, a causa del roce con una lengüeta, 
-                    labios o cuerdas vocales, como es en el caso de la flauta, trompeta, saxofón.</p>
-                <h3>&#8226; <cite>Cordófonos</cite></h3>
-                <p>Son los llamados instrumentos de cuerda, donde el sonido es generado por la vibración de una cuerda mediante percusión, frotación o pinzamiento,
-                    como en el caso del arpa, guitarra, violín, piano.</p>
-                <p>A continuacion está un video sobre géneros musicales con sus mejores exponentes.</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/DKISYbr4-PU" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                            
-                </iframe>
-            </article>
-        </section>
-
-        <section>
-            <article>
-                <h2>¿Cuántos géneros musicales existen? <br> Tipos de música o estilos musicales</h2>
-                <p>
-                    Los géneros musicales son una clasificación academicista de música según determinados aspectos. Se valora la instrumentación y la función de estas obras.
-                </p>
-                <p>Más tarde se incorporan criterios como características culturales, contexto histórico-geográfico o estilo. La clasificación divide los tipos de música según instrumentación en música vocal o instrumental
-                    y según la finalidad de la obra: música religiosa, profana, dramática…</p>
-            </article>
-            <article>
-                <h2>Criterios de clasificación de géneros musicales</h2>
-                <p>
-                    La industrialización de la música en el siglo XX clasifica más profundamente, elaborando los géneros actuales.
-                    La clasificación tiene como base una <q>dualidad</q>:
-                </p>
-                <ul>
-                    <li>Música moderna</li>
-                    <li>Música clásica</li>
-                </ul>
-                <p>Dentro de esta rama se añade otra:</p>
-                <ul>
-                    <li>Música culta</li>
-                    <li>Música tradicional</li>
-                </ul>
-            </article>
-            <h2>Géneros musicales</h2>
-            <ul>
-                <li>Blues</li>
-                <li>Corrido</li>
-                <li>Country</li>
-                <li>Cumbia</li>
-                <li>Disco</li>
-                <li>Gospel</li>
-                <li>Hip hop</li>
-                <li>Jazz</li>
-                <li>Merengue</li>
-                <li>Y muchos otros...</li>
-            </ul>
-            <article>
-                <aside><br> Version 1.0.0</aside>
-
-                <aside>HTML5</aside>
-            </article>
-        </section>
-        <footer>
+        </div>
+        <footer id='pie'>
             Luis Rene Panjon &#8226; Universidad Politecnica Salesiana &#8226; 
             telefono: <a href="tel:+593967270947">(593) 967-270-947</a> &#8226;
             Correo: <a href="mailto:lpanjon@est.ups.edu.ec">lpanjon@est.ups.edu.ec</a> &#8226;
