--- a/public_html/instrumentos_percusion.html
+++ b/public_html/instrumentos_percusion.html
@@ -6,13 +6,15 @@
         <title>Instrumentos de Percusion</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/2columnas.css" type="text/css" />
+        <link rel="stylesheet" href="css/stilos.css" type="text/css" />
     </head>
 
-    <body>
+    <body class="body">
 
-        <header>
+        <header class="cabeceratipins">
           
-                <img src="images/percusion3.jpg" alt="Percusion" width="400" height="170"/>
+                <img class="imagenlogotipoins" src="images/percusion3.jpg" alt="Percusion" width="400" height="170"/>
             
             <a href="instrumentos_viento.html#Viento">Click para ver Instrumentos de Viento &nbsp; </a>
             <a href="instrumentos_cuerda.html#Cuerda">Click para ver Instrumentos de Cuerda &nbsp; </a>
@@ -21,7 +23,8 @@
 
         <h1>Contenido:</h1>
 
-        <nav>
+        <nav id="menuPrincipal">
+            <h1>Contenido:</h1>
             <ul>
 
                 <li>1 <a href="index.html">Página principal</a></li> 
@@ -34,6 +37,7 @@
                 <li>3 <a href="generos_musicales.html">Géneros de Musica</a></li>
             </ul>
         </nav>
+        <div id="contenido">
         <section>
 
 
@@ -76,8 +80,8 @@
 
             <aside>HTML5</aside>
         </section>
-
-        <footer>
+        </div>
+        <footer id="pie">
 
             Luis René Panjón &#8226; Universidad Politécnica Salesiana &#8226; 
             telefono: <a href="tel:+593967270947">(593) 967-270-947</a> &#8226;
