--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,7 +39,7 @@
                 <h1>Música </h1>
 
                 <article>
-                    <img id="imgcentrada" src="images/musica.jpg" alt="Instrumentos musicales" width="350" height="250"/>
+                    <img class=''"imgcentrada" src="images/musica.jpg" alt="Instrumentos musicales" width="350" height="250"/>
                     <h2 id="Instrumentos">Instrumentos Musicales</h2>
                     <p>En el mundo de la musica existen varios instrumentos y varios tipos de instrumentos.</p>
                     <a href="tipo_instrumento.html#Instrumentos"> Ver tipos de instrumentos</a>
