--- a/public_html/generos_musicales.html
+++ b/public_html/generos_musicales.html
@@ -29,6 +29,7 @@
                         <li>2.3 <a href="instrumentos_percusion.html">Instrumentos de percusión</a></li>
                     </ul>
                 <li>3 <a href="generos_musicales.html">Géneros de Musica</a></li>
+                <li>4 <a href="datos.html"> Registro de datos</a>
             </ul>
         </nav>
         <div id='contenido'>
